--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://lewdev.github.io/apps/github-repo-stats/img/banner-1200x630.png">
 
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍀</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mt-3">Github Repo Stats</h1>
+    <h1 class="mt-3">Github Repo Stats <span id="loading"></span></h1>
     <textarea id=t></textarea>
     <button onclick="app.reload()">Reload</button>
 
