--- a/src/index.html
+++ b/src/index.html
@@ -41,15 +41,27 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mt-3">Github Repo Stats <span id="loading"></span></h1>
-    <textarea id=t></textarea>
-    <button onclick="app.reload()">Reload</button>
+    <h1 class="mt-3">📊 Github Repo Stats <span id="loading"></span></h1>
 
-    <table style="width: 100%"><tbody><tr>
-      <td id="left" class="p-2" style="width: 250px; vertical-align: top;"></td>
-      <td id="right" class="p-2" style="width: calc(100% - 250px); vertical-align: top;"></td>
-    </tr></tbody></table>
+    <div>
+      <canvas id="myChart"></canvas>
+    </div>
+
+    <div class="d-flex justify-content-between">
+      <div class="p-2" style="width: 240px; vertical-align: top;">
+        <div>
+          <textarea id=t></textarea>
+          <button onclick="app.reload()">Reload</button>
+          Pulls data up to 7 days old from Github API and stores it in localStorage.
+        </div>
+        <div id="left"></div>
+      </div>
+      <div id="right" class="p-2" style="width: calc(100% - 250px); vertical-align: top;"></div>
+    </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/github-api.js"></script>
+  <script src="assets/ReposCommon.js"></script>
+  <script src="assets/ReposSummary.js"></script>
   <script src="script.js"></script>
 </body></html>
