--- a/src/index.html
+++ b/src/index.html
@@ -64,4 +64,7 @@
   <script src="assets/ReposCommon.js"></script>
   <script src="assets/ReposSummary.js"></script>
   <script src="script.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-2833478-13"></script><script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-2833478-13');</script>
+
 </body></html>
